add app label and launch icon

--- a/ios/auto_fish_feeding/Info.plist
+++ b/ios/auto_fish_feeding/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>auto_fish_feeding</string>
+	<string>AFF</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
