--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.10.0",
-    "react-native-ui-lib": "^7.42.0"
+    "react-native-ui-lib": "^7.42.0",
+    "react-native-vector-icons": "^10.2.0",
+    "toastify-react-native": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
