--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
@@ -38,6 +39,9 @@
     "@rn-primitives/toggle": "^1.2.0",
     "@rn-primitives/toggle-group": "^1.2.0",
     "@rn-primitives/tooltip": "^1.2.0",
+    "@ui-kitten/components": "^5.3.1",
+    "light-date": "^1.2.0",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
@@ -46,6 +50,7 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-ui-lib": "^7.42.0",
     "react-native-vector-icons": "^10.2.0",
     "toastify-react-native": "^7.2.0"
@@ -57,6 +62,8 @@
     "@react-native-community/cli": "18.0.0",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
@@ -67,6 +74,7 @@
     "jest": "^29.6.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
+    "react-native-wheel-pick": "^1.2.4",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
